Setup a test algo. It is not currently working as it's current iteration is not the correct one.

--- a/Public/index.html
+++ b/Public/index.html
@@ -24,7 +24,9 @@
         <button class="select" id="insertion">Insertion Sort</button>
         <button class="select" id="heap">Heap Sort</button>
         <button class="select" id="bucket">Bucket Sort</button>
+        <button class="test" id="test">Test</button>
         <button id="newArray">New Array</button>
+        bu
       </div>
     </div>
   </body>
