Finished the QuickSort implementation algorithms.

--- a/Public/index.html
+++ b/Public/index.html
@@ -17,14 +17,14 @@
         width="800"
       ></canvas>
       <div class="SortSelection">
-        <button class="select" id="clear">Clear</button>
-        <button class="select" id="quick">Quick Sort</button>
+        <button class="select" id="reset">Reset</button>
+        <button class="select" id="test">Nested For Loop</button>
         <button class="select" id="bubble">Bubble Sort</button>
         <button class="select" id="merge">Merge Sort</button>
         <button class="select" id="insertion">Insertion Sort</button>
         <button class="select" id="heap">Heap Sort</button>
         <button class="select" id="bucket">Bucket Sort</button>
-        <button class="test" id="test">Test</button>
+        <button class="select" id="quick">Quick Sort</button>
         <button id="newArray">New Array</button>
       </div>
     </div>
