getting ready for website

--- a/Public/index.html
+++ b/Public/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sorting Algorithm Visualizer</title>
     <link rel="stylesheet" href="CSS/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.1/font/bootstrap-icons.css"
+    />
   </head>
   <body>
     <h1>Sorting Algorithm Visulizer</h1>
@@ -17,6 +21,10 @@
         width="800"
       ></canvas>
       <div class="SortSelection">
+        <button class="select" id="goBack">
+          <a href="NAME ME THE NAME OF THE SITE"></a>
+          <i class="bi bi-house-door-fill"> Go Back Home</i>
+        </button>
         <button class="select" id="reset">Reset</button>
         <button class="select" id="test">Nested For Loop</button>
         <button class="select" id="bubble">Bubble Sort</button>
