Updated inside Portfolio

--- a/Public/index.html
+++ b/Public/index.html
@@ -21,10 +21,9 @@
         width="800"
       ></canvas>
       <div class="SortSelection">
-        <button class="select" id="goBack">
-          <a href="NAME ME THE NAME OF THE SITE"></a>
+        <a class="" id="" href="../../../View/index.html">
           <i class="bi bi-house-door-fill"> Go Back Home</i>
-        </button>
+        </a>
         <button class="select" id="reset">Reset</button>
         <button class="select" id="test">Nested For Loop</button>
         <button class="select" id="bubble">Bubble Sort</button>
