--- a/Public/index.html
+++ b/Public/index.html
@@ -4,37 +4,87 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sorting Algorithm Visualizer</title>
-    <link rel="stylesheet" href="CSS/style.css" />
+    <title>Celeste Artley's Portfolio</title>
+    <link rel="stylesheet" href="./Styles/Index.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.1/font/bootstrap-icons.css"
     />
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
+      integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
+      integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
-    <h1>Sorting Algorithm Visulizer</h1>
-    <div class="CanvasContainer">
-      <canvas
-        title="Sorting Algorithm Visualizer"
-        id="AlgoDisplay"
-        height="800"
-        width="800"
-      ></canvas>
-      <div class="SortSelection">
-        <a class="" id="" href="../../../View/index.html">
-          <i class="bi bi-house-door-fill"> Go Back Home</i>
-        </a>
-        <button class="select" id="reset">Reset</button>
-        <button class="select" id="test">Nested For Loop</button>
-        <button class="select" id="bubble">Bubble Sort</button>
-        <button class="select" id="merge">Merge Sort</button>
-        <button class="select" id="insertion">Insertion Sort</button>
-        <button class="select" id="heap">Heap Sort</button>
-        <button class="select" id="bucket">Bucket Sort</button>
-        <button class="select" id="quick">Quick Sort</button>
-        <button id="newArray">New Array</button>
+    <section name="Navigation">
+      <div class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a
+                class="nav-link text text-white"
+                href="../../../View/index.html"
+                rel="noopener noreferrer"
+                >Home</a
+              >
+            </li>
+          </ul>
+        </div>
       </div>
-    </div>
+    </section>
+    <section name="Visualizer">
+      <div class="bg-dark">
+        <h1 class="text-white text-center">Sorting Algorithm Visulizer</h1>
+        <div class="CanvasContainer bg-dark text-center">
+          <canvas
+            title="Sorting Algorithm Visualizer"
+            id="AlgoDisplay"
+            height="800"
+            width="800"
+            class="bg-secondary"
+          ></canvas>
+          <div class="SortSelection">
+            <button class="select" id="reset">Reset</button>
+            <button class="select" id="test">Nested For Loop</button>
+            <button class="select" id="bubble">Bubble Sort</button>
+            <button class="select" id="merge">Merge Sort</button>
+            <button class="select" id="insertion">Insertion Sort</button>
+            <button class="select" id="heap">Heap Sort</button>
+            <button class="select" id="bucket">Bucket Sort</button>
+            <button class="select" id="quick">Quick Sort</button>
+            <button id="newArray">New Array</button>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
   <script type="module" src="JS/Controller.js"></script>
 </html>
