--- a/Public/index.html
+++ b/Public/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Celeste Artley's Portfolio</title>
-    <link rel="stylesheet" href="./Styles/Index.css" />
+    <title>Movie Rating System Info</title>
+    <link rel="stylesheet" href="/Styles/Index.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -35,6 +35,13 @@
   <body>
     <section name="Navigation">
       <div class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand ml-5" href="/index.html"
+          ><img
+            class="IconBrand"
+            src="/Img/profilePic.jpg"
+            alt="Celeste Artley Logo"
+            srcset=""
+        /></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -49,11 +56,46 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a
-                class="nav-link text text-white"
-                href="../../../View/index.html"
-                rel="noopener noreferrer"
+              <a class="nav-link" href="/index.html" rel="noopener noreferrer"
                 >Home</a
+              >
+            </li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                id="navbarDropdown"
+                role="button"
+                data-toggle="dropdown"
+                aria-haspopup="true"
+                aria-expanded="false"
+              >
+                Portfolio
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="#">All Projects</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="/movieRatingSystem.html"
+                  >Movie Rating System</a
+                >
+                <a
+                  class="dropdown-item"
+                  href="../Project2/Sorting Algorithm Visualizer/Public/index.html"
+                  >Sorting Algorithm Visualizer</a
+                >
+                <a
+                  class="dropdown-item"
+                  href="https://github.com/Celeste-Artley/InventoryJavaOOP"
+                  >Inventory Management System</a
+                >
+              </div>
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="/contactMe.html"
+                rel="noopener noreferrer"
+                >Contact</a
               >
             </li>
           </ul>
@@ -61,26 +103,70 @@
       </div>
     </section>
     <section name="Visualizer">
-      <div class="bg-dark">
+      <div class="bg-secondary">
         <h1 class="text-white text-center">Sorting Algorithm Visulizer</h1>
-        <div class="CanvasContainer bg-dark text-center">
+        <div class="CanvasContainer bg-secondary text-center d-none d-sm-block">
           <canvas
             title="Sorting Algorithm Visualizer"
             id="AlgoDisplay"
-            height="800"
-            width="800"
-            class="bg-secondary"
+            height="650"
+            width="1800"
+            class="bg-dark"
           ></canvas>
-          <div class="SortSelection">
-            <button class="select" id="reset">Reset</button>
-            <button class="select" id="test">Nested For Loop</button>
-            <button class="select" id="bubble">Bubble Sort</button>
-            <button class="select" id="merge">Merge Sort</button>
-            <button class="select" id="insertion">Insertion Sort</button>
-            <button class="select" id="heap">Heap Sort</button>
-            <button class="select" id="bucket">Bucket Sort</button>
-            <button class="select" id="quick">Quick Sort</button>
-            <button id="newArray">New Array</button>
+          <div class="bg-secondary SortSelection pt-4 pb-4">
+            <button class="btn btn-danger select" id="reset">Reset</button>
+            <button class="btn btn-primary select" id="test">
+              Nested For Loop
+            </button>
+            <button class="btn btn-primary select" id="bubble">
+              Bubble Sort
+            </button>
+            <button class="btn btn-primary select" id="merge">
+              Merge Sort
+            </button>
+            <button class="btn btn-primary select" id="insertion">
+              Insertion Sort
+            </button>
+            <button class="btn btn-primary select" id="heap">Heap Sort</button>
+            <button class="btn btn-primary select" id="bucket">
+              Bucket Sort
+            </button>
+            <button class="btn btn-primary select" id="quick">
+              Quick Sort
+            </button>
+            <button class="btn btn-success" id="newArray">New Array</button>
+          </div>
+        </div>
+        <div class="CanvasContainer bg-secondary text-center d-block d-sm-none">
+          <canvas
+            title="Sorting Algorithm Visualizer"
+            id="sAlgoDisplay"
+            height="400"
+            width="400"
+            class="bg-dark"
+          ></canvas>
+          <div class="bg-secondary SortSelection pt-4 pb-4">
+            <button class="btn btn-danger select" id="sreset">Reset</button>
+            <button class="btn btn-primary select" id="stest">
+              Nested For Loop
+            </button>
+            <button class="btn btn-primary select" id="sbubble">
+              Bubble Sort
+            </button>
+            <button class="btn btn-primary select" id="smerge">
+              Merge Sort
+            </button>
+            <button class="btn btn-primary select" id="sinsertion">
+              Insertion Sort
+            </button>
+            <button class="btn btn-primary select" id="sheap">Heap Sort</button>
+            <button class="btn btn-primary select" id="sbucket">
+              Bucket Sort
+            </button>
+            <button class="btn btn-primary select" id="squick">
+              Quick Sort
+            </button>
+            <button class="btn btn-success" id="snewArray">New Array</button>
           </div>
         </div>
       </div>
